--- a/listenserver.cfg
+++ b/listenserver.cfg
@@ -1,98 +1,97 @@
-// This file was made by Vitaly Zaitsev aka V1TSK //
+// Author: V1TSK. //
 // For Home use only! //
-// ICQ: 298024135 //
-// Jabber: zaivit@jabber.ru //
+// Jabber: vitaly@easycoding.org //
 // Site: http://www.easycoding.org //
 
 // General Settings //
 echo "Executing main config file..."
 
-// ЭТИ НАСТРОЙКИ ЗАДАЮТСЯ ПОЛЬЗОВАТЕЛЕМ-АДМИНОМ СЕРВЕРА //
+// Р­РўР РќРђРЎРўР РћР™РљР Р—РђР”РђР®РўРЎРЇ РџРћР›Р¬Р—РћР’РђРўР•Р›Р•Рњ-РђР”РњРРќРћРњ РЎР•Р Р’Р•Р Рђ //
 
-// Название Вашего сервера. Обязательно пишется в кавычках! //
+// РќР°Р·РІР°РЅРёРµ Р’Р°С€РµРіРѕ СЃРµСЂРІРµСЂР°. РћР±СЏР·Р°С‚РµР»СЊРЅРѕ РїРёС€РµС‚СЃСЏ РІ РєР°РІС‹С‡РєР°С…! //
 hostname "Garry's Mod Server"
 
-// Режим сервера: 0 - Интернет-сервер; 1 - доступный только в локальной сети. //
+// Р РµР¶РёРј СЃРµСЂРІРµСЂР°: 0 - РРЅС‚РµСЂРЅРµС‚-СЃРµСЂРІРµСЂ; 1 - РґРѕСЃС‚СѓРїРЅС‹Р№ С‚РѕР»СЊРєРѕ РІ Р»РѕРєР°Р»СЊРЅРѕР№ СЃРµС‚Рё. //
 sv_lan 0
 
-// Пароль администратора. Нужно заменить на любой другой из латинских букв + цифр! //
+// РџР°СЂРѕР»СЊ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂР°. РќСѓР¶РЅРѕ Р·Р°РјРµРЅРёС‚СЊ РЅР° Р»СЋР±РѕР№ РґСЂСѓРіРѕР№ РёР· Р»Р°С‚РёРЅСЃРєРёС… Р±СѓРєРІ + С†РёС„СЂ! //
 rcon_password "!!!CHANGEME!!!"
 
-// Пароль входа на созданный сервер. Пишется в кавычках. Пустые кавычки - пароля нет (зайти может любой). //
+// РџР°СЂРѕР»СЊ РІС…РѕРґР° РЅР° СЃРѕР·РґР°РЅРЅС‹Р№ СЃРµСЂРІРµСЂ. РџРёС€РµС‚СЃСЏ РІ РєР°РІС‹С‡РєР°С…. РџСѓСЃС‚С‹Рµ РєР°РІС‹С‡РєРё - РїР°СЂРѕР»СЏ РЅРµС‚ (Р·Р°Р№С‚Рё РјРѕР¶РµС‚ Р»СЋР±РѕР№). //
 sv_password ""
 
-// 1 - разрешает использовать фонарик; 0 - запрещает. //
+// 1 - СЂР°Р·СЂРµС€Р°РµС‚ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ С„РѕРЅР°СЂРёРє; 0 - Р·Р°РїСЂРµС‰Р°РµС‚. //
 mp_flashlight 1
 
-// Время на карте. Рекомендуется 0, т.к. это construction-сервер. //
+// Р’СЂРµРјСЏ РЅР° РєР°СЂС‚Рµ. Р РµРєРѕРјРµРЅРґСѓРµС‚СЃСЏ 0, С‚.Рє. СЌС‚Рѕ construction-СЃРµСЂРІРµСЂ. //
 mp_timelimit 0
 
-// 1 - разрешить скачивание файлов с сервера. //
+// 1 - СЂР°Р·СЂРµС€РёС‚СЊ СЃРєР°С‡РёРІР°РЅРёРµ С„Р°Р№Р»РѕРІ СЃ СЃРµСЂРІРµСЂР°. //
 sv_allowdownload 1
 
-// 1 - разрешить закачку файлов на сервер (спреи, файлы Advanced Duplicator и т.д.). //
+// 1 - СЂР°Р·СЂРµС€РёС‚СЊ Р·Р°РєР°С‡РєСѓ С„Р°Р№Р»РѕРІ РЅР° СЃРµСЂРІРµСЂ (СЃРїСЂРµРё, С„Р°Р№Р»С‹ Advanced Duplicator Рё С‚.Рґ.). //
 sv_allowupload 1
 
-// Разрешает или запрещает ставить игру на паузу. Рекомендуется значение 0. //
+// Р Р°Р·СЂРµС€Р°РµС‚ РёР»Рё Р·Р°РїСЂРµС‰Р°РµС‚ СЃС‚Р°РІРёС‚СЊ РёРіСЂСѓ РЅР° РїР°СѓР·Сѓ. Р РµРєРѕРјРµРЅРґСѓРµС‚СЃСЏ Р·РЅР°С‡РµРЅРёРµ 0. //
 pausable "0"
 sv_pausable 0
 
-// 1 - включить общение через микрофон, 0 - выключить (снижает нагрузку на канал сервера). //
+// 1 - РІРєР»СЋС‡РёС‚СЊ РѕР±С‰РµРЅРёРµ С‡РµСЂРµР· РјРёРєСЂРѕС„РѕРЅ, 0 - РІС‹РєР»СЋС‡РёС‚СЊ (СЃРЅРёР¶Р°РµС‚ РЅР°РіСЂСѓР·РєСѓ РЅР° РєР°РЅР°Р» СЃРµСЂРІРµСЂР°). //
 sv_voiceenable "1"
 
-// 1 - все могут говорить в микрофон, 0 - у каждой команды свой голосовой чат. //
+// 1 - РІСЃРµ РјРѕРіСѓС‚ РіРѕРІРѕСЂРёС‚СЊ РІ РјРёРєСЂРѕС„РѕРЅ, 0 - Сѓ РєР°Р¶РґРѕР№ РєРѕРјР°РЅРґС‹ СЃРІРѕР№ РіРѕР»РѕСЃРѕРІРѕР№ С‡Р°С‚. //
 sv_alltalk 1
 
-// Время до исчезновения декалей в секундах. //
+// Р’СЂРµРјСЏ РґРѕ РёСЃС‡РµР·РЅРѕРІРµРЅРёСЏ РґРµРєР°Р»РµР№ РІ СЃРµРєСѓРЅРґР°С…. //
 decalfrequency 60
 
-// Игровой режим по умолчанию. Рекомендуется только SandBox. //
+// РРіСЂРѕРІРѕР№ СЂРµР¶РёРј РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ. Р РµРєРѕРјРµРЅРґСѓРµС‚СЃСЏ С‚РѕР»СЊРєРѕ SandBox. //
 sv_defaultgamemode "sandbox"
 
-// ЛИМИТЫ GARRY'S MOD //
-// Не ставьте слишком большие значения, т.к. сервер может начать лагать! //
-// Максимальное количество NPC (ботов). //
+// Р›РРњРРўР« GARRY'S MOD //
+// РќРµ СЃС‚Р°РІСЊС‚Рµ СЃР»РёС€РєРѕРј Р±РѕР»СЊС€РёРµ Р·РЅР°С‡РµРЅРёСЏ, С‚.Рє. СЃРµСЂРІРµСЂ РјРѕР¶РµС‚ РЅР°С‡Р°С‚СЊ Р»Р°РіР°С‚СЊ! //
+// РњР°РєСЃРёРјР°Р»СЊРЅРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ NPC (Р±РѕС‚РѕРІ). //
 sbox_maxnpcs "0"
-// Максимум шариков. //
+// РњР°РєСЃРёРјСѓРј С€Р°СЂРёРєРѕРІ. //
 sbox_maxballoons "10"
-// Максимум динамитов. //
+// РњР°РєСЃРёРјСѓРј РґРёРЅР°РјРёС‚РѕРІ. //
 sbox_maxdynamite "4"
-// Разрешить использование NoClip при строительстве. //
+// Р Р°Р·СЂРµС€РёС‚СЊ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ NoClip РїСЂРё СЃС‚СЂРѕРёС‚РµР»СЊСЃС‚РІРµ. //
 sbox_noclip "1"
-// Максимум Thruster'ов. //
+// РњР°РєСЃРёРјСѓРј Thruster'РѕРІ. //
 sbox_maxthrusters "20"
-// Максимум пропсов (Props). //
+// РњР°РєСЃРёРјСѓРј РїСЂРѕРїСЃРѕРІ (Props). //
 sbox_maxprops "100"
-// Максимум колёс. //
+// РњР°РєСЃРёРјСѓРј РєРѕР»С‘СЃ. //
 sbox_maxwheels "20"
-// 1 - разрешить игрокам атаковать друг друга (Player vs. Player damage). //
+// 1 - СЂР°Р·СЂРµС€РёС‚СЊ РёРіСЂРѕРєР°Рј Р°С‚Р°РєРѕРІР°С‚СЊ РґСЂСѓРі РґСЂСѓРіР° (Player vs. Player damage). //
 sbox_plpldamage "0"
-// Управление режимом неуязвимости. 0 - режим выключен. //
+// РЈРїСЂР°РІР»РµРЅРёРµ СЂРµР¶РёРјРѕРј РЅРµСѓСЏР·РІРёРјРѕСЃС‚Рё. 0 - СЂРµР¶РёРј РІС‹РєР»СЋС‡РµРЅ. //
 sbox_godmode "0"
-// 1 - игрок неуязвим. //
+// 1 - РёРіСЂРѕРє РЅРµСѓСЏР·РІРёРј. //
 sbox_playergod "0"
-// Максимум Hoverball'ов. //
+// РњР°РєСЃРёРјСѓРј Hoverball'РѕРІ. //
 sbox_maxhoverballs "20"
 // Maximum sents. //
 sbox_maxsents "20"
-// Максимум эффектов (effects). /
+// РњР°РєСЃРёРјСѓРј СЌС„С„РµРєС‚РѕРІ (effects). /
 sbox_maxeffects "10"
-// Максимум обычных кнопок (не Wire). //
+// РњР°РєСЃРёРјСѓРј РѕР±С‹С‡РЅС‹С… РєРЅРѕРїРѕРє (РЅРµ Wire). //
 sbox_maxbuttons "10"
-// Максимум ламп и источников света. //
+// РњР°РєСЃРёРјСѓРј Р»Р°РјРї Рё РёСЃС‚РѕС‡РЅРёРєРѕРІ СЃРІРµС‚Р°. //
 sbox_maxlamps "4"
-// Максимум рэгдоллов. //
+// РњР°РєСЃРёРјСѓРј СЂСЌРіРґРѕР»Р»РѕРІ. //
 sbox_maxragdolls "10"
-// Максимум машин. //
+// РњР°РєСЃРёРјСѓРј РјР°С€РёРЅ. //
 sbox_maxvehicles "4"
-// 1 - разрешить NPC на сервере; 0 - запретить. //
+// 1 - СЂР°Р·СЂРµС€РёС‚СЊ NPC РЅР° СЃРµСЂРІРµСЂРµ; 0 - Р·Р°РїСЂРµС‚РёС‚СЊ. //
 sbox_allownpcs "0"
-// Максимум эмиттеров. //
+// РњР°РєСЃРёРјСѓРј СЌРјРёС‚С‚РµСЂРѕРІ. //
 sbox_maxemitters "5"
 
 // Server Rates //
-sv_minrate 0
-sv_maxrate 25000
+sv_minrate 20000
+sv_maxrate 35000
 sv_minupdaterate 33
 sv_maxupdaterate 66
 sv_mincmdrate 33
